--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
     padding: 10px;
     gap: 10px;
     align-items: center;
+    position: sticky;
+    top:0px;
+    background-color: white;
+    z-index: 1;
 
 }
 .navbar__s1__title{
@@ -29,6 +33,7 @@ body {
     display: flex;
     gap: 10px;
     align-items: center;
+    background-color: white;
 
 }
 
@@ -45,6 +50,27 @@ body {
     display: flex;
     gap: 10px;
     align-items: center;
+}
+/* mylearing popup */
+.mylearning{
+    position: relative;
+    cursor: pointer;
+
+}
+.mylearning__popup{
+    position: absolute;
+    border: solid 2px black;
+    width: 100px;
+    height: 50px;
+    padding: 17px;
+    background-color: white;
+    top:38px;
+    right:5px;
+    display: none;
+
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
 }
 
 /* categories */
@@ -67,7 +93,18 @@ body {
 
 .sale-image img{
     width: 100%;
+    position: relative;
 }
+.sale-image-offer{
+    border: 2px solid rgb(16, 15, 15);
+    background-color: white;
+    width: 400px;
+    padding: 2%;
+    position: absolute;
+    top:180px;
+    left:70px;
+}
+
 
 /* recommended */
 
@@ -83,6 +120,7 @@ body {
 }
 .course__card{
     width: 250px;
+    margin: 20px;
 
 }
 .course__card img{
@@ -110,12 +148,12 @@ body {
 /* Popular  */
 .popular-section{
    
-    padding: 10px;
+    padding: 20px;
 }
 .popular__container{
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 20px;
     flex-wrap: wrap;
 }
 /* footer */
