--- a/style.css
+++ b/style.css
@@ -87,6 +87,14 @@ body {
     padding: 10px;
     color: white;
     margin: 10px;
+    cursor: pointer;
+     border:solid 1px  #A634F0;
+}
+.categories p:hover{
+      transform: 2s;
+      color: #A634F0;
+      background-color:white;
+      border:solid 1px  #A634F0;
 }
 
 /* sale-image */
@@ -101,8 +109,22 @@ body {
     width: 400px;
     padding: 2%;
     position: absolute;
-    top:180px;
-    left:70px;
+    top:210px;
+    left:100px;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+@keyframes zoom{
+    0%{
+        transform:scale(0);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 
