--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body {
     gap: 10px;
     align-items: center;
 }
+.navbar__s4
+{
+    display: none;
+}
 /* mylearing popup */
 .mylearning{
     position: relative;
@@ -96,7 +100,6 @@ body {
       background-color:white;
       border:solid 1px  #A634F0;
 }
-
 /* sale-image */
 
 .sale-image img{
@@ -141,8 +144,9 @@ body {
 
 }
 .course__card{
-    width: 250px;
-    margin: 20px;
+    flex-grow: 1;
+    flex-basis: 20px;
+    margin: 5px;
 
 }
 .course__card img{
@@ -199,4 +203,27 @@ body {
     display: flex;
     justify-content: space-between;
 }
+@media screen and (max-width:800px)
+{
+    body{
+        font-size: 10px;
+    }
+    
+}
+@media screen and (max-width:600px)
+{
+   .course__card{
+        flex-basis: 40%; 
+    } 
+    .categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
+}
+
 
